cambio de estilo para el body y el height

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ar- web</title>
-    
+    <style>
+        body,html{
+            height: 100vh;
+
+            display: flex;
+            flex: 1;
+        }
+    </style>
 </head>
 <body>
 
@@ -20,7 +27,7 @@
         </a-marker>
         <a-camera-static></a-camera-static>
     </a-scene>
-    
+
    <script>
    </script>
 
