--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <style>
         body,html{
             height: 100vh;
-
-            display: flex;
-            flex: 1;
+            border: 2px solid #000;
+            padding: 0.5rem;
+            box-sizing: border-box;
         }
     </style>
 </head>
