--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <!-- create your content here. just a box for now -->
     <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
     <!-- define a camera which will move according to the marker position -->
-    <a-marker-camera preset='hiro'>
-        
-        <a-entity position="0 0 0">
-            <a-box position="0 0 -1" material="color: red;"></a-box>
-          </a-entity>
-        </a-marker>
-
-    </a-marker-camera>
+    <a-entity position="0 0 0">
+        <a-box position="0 0 -1" material="color: red;"></a-box>
+      </a-entity>
+    </a-marker>
+    <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
